--- a/src/components/InputForm.css
+++ b/src/components/InputForm.css
@@ -25,7 +25,7 @@
 }
 
 .form-group__description {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-bottom: 0 0.5rem;
 }
 
